--- a/responsive.css
+++ b/responsive.css
@@ -3,11 +3,119 @@
     .top-wrapper h1 {
         font-size: 32px;
     }
+
+    .lesson {
+    	width: 50%;
+    }
+
+    .box{
+    	margin-top: 10px;
+    	
+    }
+
+    .img-wrapper{
+    	width: 200px;
+    }
+
+    .top-wrapper{
+       margin-right:30px;
+       margin-left:30px;
+       height:500px;
+    }
+
+    #menu-area{
+        padding: 0px 50px;
+    }
+
+    #menu-area ul{
+    	width: 500px;
+    }
+
 }
+
 @media all and (max-width: 670px) {
+    .container {
+        padding:0px;
+        margin: 0 auto;
+	}
+
+/* header */
+    #menu-area{
+        padding:0px 30px;
+    }
+
+    #menu-area .logo{
+        font-size:90%;
+    }
+
+    .header-right{
+        display:none;
+    }
+
+	.menu-icon{
+	    display:block;
+	    padding-top: 10px;
+	  }
+
+/* main */
+	.top-wrapper{
+        height: 300px;
+	}
+
     .top-wrapper h1 {
         font-size: 24px;
         text-align: left;
-        line-height: 36px;
+        padding-top: 100px;
     }
+
+    .img-wrapper{
+        display:none;
+    }
+
+    .search{
+        width:80%;
+        font-size:14px;
+    }
+
+/* main tambahan */
+    .lesson{
+    	width:100%;
+    }
+
+      .heading{
+        font-size:16px;
+        padding-top: 20px;
+    	padding-bottom: 20px;
+    }
+
+    .box{
+    	width: 100%;
+    }
+
+/* footer */
+	.footer-logo {
+    font-size: 24px;
+    padding-left:30px;
+	}
+
+	footer h3 {
+	    padding-top: 40px;
+	    padding-left:30px;
+	    font-size: 18px;
+	}
+
+	footer p {
+	    margin-top: -150px;
+	    margin-right:30px;
+	}
+
+	footer input {
+	    width:80%;
+	    margin-left:30px;
+	}
+
+	.subs {
+	    width:80%;
+	    margin-left:30px;
+	}
 }
