--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,11 @@ button:hover {
     cursor: pointer;
 }
 
+.menu-icon{
+  color:black;
+  float:right;
+  display:none;
+}
 /* akhir header */
 
 /* css main */
@@ -164,10 +169,6 @@ input{
     width:150px;
 }
 
-i{
-    color: black;
-}
-
 .apply{
     float: right;
     margin-right: 20px;
@@ -205,6 +206,7 @@ footer {
     font-size: 30px;
     float: left;
     color: white;
+    font-style: bold;
 }
 
 footer h3 {
